# haskell_practice

./: CHANGELOG.md  haskellPractice.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
