cabal-version:      2.4
name:               haskellPractice
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:
A collection of exercises in Haskell. This is my first functional language and I am
new to many of the concepts within Haskell and it's functional cousins. 

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Matthew Brandenburg
maintainer:         matt.bran87@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskellPractice
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
